<resources>
    <string name="app_name">HRApp</string>
    <string name="to_be_filled">-</string>
    <string name="nhif">NHIF</string>
    <string name="nssf">NSSF</string>
    <string name="kra_pin">KRA Pin</string>
    <string name="national_id">National Id</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="high">High</string>
    <string name="mid">Mid</string>
    <string name="low">Low</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="post_update">Post Update</string>
    <string name="my_tickets">My tickets</string>
    <string name="updates">Updates</string>
    <string name="tickets_updates"><![CDATA[Tickets & Updates]]></string>
    <string name="no_tickets">No tickets available</string>
    <string name="tickets_available">Tickets available</string>
    <string name="no_updates">No updates available</string>
    <string name="updates_available">Updates available</string>
    <string name="post_ticket">Post Ticket</string>
    <string name="timetable">Timetable</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="role">Role</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="kra">KRA</string>
    <string name="email_address">Email Address</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="done">Done</string>
    <string name="signout">SignOut</string>
    <string name="delete">Delete</string>
</resources>