<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.userManagement.NewUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/adminUserTb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/semiBlack"
            app:navigationIcon="@drawable/back"
            app:title="New User"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/first_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/second_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/second_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/email_address_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/phone_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/nationalId_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/national_id"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/nhfi_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/nhif"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/nssf_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/nssf"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/kra_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/kra"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/position_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/position"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/black"
                        android:textColorHint="@color/semiBlack"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/dobField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/to_be_filled"
                        android:textColor="@color/teal_700"
                        android:textColorHint="@color/semiBlack"
                        android:textStyle="bold" />

                </LinearLayout>

                <DatePicker
                    android:id="@+id/dobPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>

                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <EditText
                    android:id="@+id/confirm_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semiBlack" />

                <Button
                    android:id="@+id/createAccountButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/semiBlack"
                    android:background="@drawable/search_bg"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>