<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.updates.NewUpdate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/newUpdateTb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/semiBlack"
            app:title="New Updates"
            app:navigationIcon="@drawable/back"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center">
            <EditText
                android:id="@+id/titleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_bell_"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical" />
        </LinearLayout>

        <Button
            android:id="@+id/postUpdateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:backgroundTint="@color/semiBlack"
            android:background="@drawable/search_bg"
            android:text="@string/post_update"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>